@@ -2,14 +2,22 @@ Package: data.tree
 Type: Package
 Title: General Purpose Hierarchical Data Structure
 Version: 0.1.7
-Date: 2015-06-20
+Date: 2015-08-01
 Author: Christoph Glur
 Maintainer: Christoph Glur <christoph.glur@ipub.com>
 VignetteBuilder: knitr
 Imports:
     R6, stringr
 Suggests:
-    testthat, magrittr, knitr, ape, networkD3, yaml, jsonlite, DiagrammeR
+    testthat, 
+    magrittr, 
+    knitr, 
+    ape, 
+    networkD3, 
+    yaml, 
+    jsonlite, 
+    DiagrammeR, 
+    igraph
 Enhances:
 Description: Create tree structures from hierarchical data, and use the utility 
     methods to traverse the tree in various orders. Aggregate, print, convert to and from data.frame, 
