@@ -9,6 +9,7 @@ S3method(as.dendrogram,Node)
 S3method(as.list,Node)
 S3method(print,Node)
 export(Aggregate)
+export(AreNamesUnique)
 export(Climb)
 export(Clone)
 export(CreateDummyTree)
@@ -35,6 +36,7 @@ export(ToListSimple)
 export(ToNewick)
 export(Traverse)
 export(as.Node)
+export(as.igraph.Node)
 export(as.phylo.Node)
 export(isLeaf)
 export(isNotLeaf)
